// See https://github.com/JetBrains/gradle-intellij-plugin/
// Using Gradle IntelliJ Plugin (1.x)

plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.17.4'
    id 'org.jetbrains.changelog' version '2.4.0'
}

group = 'org.sanchouss.idea.plugins.instantpatch'
version = '0.0.9-SNAPSHOT'

intellij {
    version.set("2023.1")
    type.set("IC")
    plugins = ['java']
}

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

test {
    enabled = false // tests are not run to save build time
}

tasks.named("buildSearchableOptions") {
    enabled = false // to save build time
}

// reason was lost ...
//buildSearchableOptions {
//    jvmArgs '--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED'
//}
//runIde {
//    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
//}

dependencies {
    implementation('com.github.mwiede:jsch:2.27.3')
    compileOnly('javax.xml.bind:jaxb-api:2.3.1')  // moved out of JDK since Java 9. Alt is shadowing with plugin 'com.github.johnrengelman.shadow'
//    implementation('com.jcraft:jsch:0.1.55')  // abandoned, do not support modern auth methods
//    implementation('org.slf4j:slf4j-api:1.7.25')      // todo: remove
//    implementation('javax.xml.bind:jaxb-api:2.3.0')   // don't; this would cause two classloaders' conflict when debugging plugin
//    implementation('com.intellij:openapi:7.0.3')  // don't; this would cause two classloaders' conflict when debugging plugin

    testImplementation('junit:junit:4.13.2')
}

patchPluginXml {
    sinceBuild.set("231") // IDE build number, JavaVersion.VERSION_17 limits to higher than 221
    untilBuild.set("241.*") // Gradle IntelliJ Plugin 1.x does not support building plugins against the IntelliJ Platform 2024.2+ (242+).
    changeNotes.set("""
        <ul>
            <li>Fix build with `Gradle IntelliJ Plugin (1.x)` plugin</li>
            <li>Replace deprecated interfaces with newer ones</li>
            <li>Replace abandoned original jsch library with maintained fork</li>
        </ul>
    """)

}

